Fix bug with modal on iPhone

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -711,23 +711,44 @@ h3 {
     font-size: 30px;
 }
 
-/* Borrowed from http://tympanus.net/Development/ModalWindowEffects/ */
-.transition {
-    -webkit-transform-style: preserve-3d;
-	-moz-transform-style: preserve-3d;
-	transform-style: preserve-3d;
-	-webkit-transform: translateZ(-3000px) rotateY(90deg);
-	-moz-transform: translateZ(-3000px) rotateY(90deg);
-	-ms-transform: translateZ(-3000px) rotateY(90deg);
-	transform: translateZ(-3000px) rotateY(90deg);
-	color: transparent;
-	opacity: 0;
-}
 
-.transition.in {
-    -webkit-animation: slit .7s forwards ease-out;
-	-moz-animation: slit .7s forwards ease-out;
-	animation: slit .7s forwards ease-out;
+@media (min-width: 768px) {
+    /* Borrowed from http://tympanus.net/Development/ModalWindowEffects/ */
+    .transition {
+        -webkit-transform-style: preserve-3d;
+    	-moz-transform-style: preserve-3d;
+    	transform-style: preserve-3d;
+    	-webkit-transform: translateZ(-3000px) rotateY(90deg);
+    	-moz-transform: translateZ(-3000px) rotateY(90deg);
+    	-ms-transform: translateZ(-3000px) rotateY(90deg);
+    	transform: translateZ(-3000px) rotateY(90deg);
+    	color: transparent;
+    	opacity: 0;
+    }
+
+    .transition.in {
+        -webkit-animation: slit .7s forwards ease-out;
+    	-moz-animation: slit .7s forwards ease-out;
+    	animation: slit .7s forwards ease-out;
+    }
+
+    .transition2 {
+        -webkit-transform-style: preserve-3d;
+    	-moz-transform-style: preserve-3d;
+    	transform-style: preserve-3d;
+    	-webkit-transform: translateZ(-3000px) rotateX(90deg);
+    	-moz-transform: translateZ(-3000px) rotateX(90deg);
+    	-ms-transform: translateZ(-3000px) rotateX(90deg);
+    	transform: translateZ(-3000px) rotateX(90deg);
+    	color: transparent;
+    	opacity: 0;
+    }
+
+    .transition2.in {
+        -webkit-animation: slit2 .7s forwards ease-out;
+    	-moz-animation: slit2 .7s forwards ease-out;
+    	animation: slit2 .7s forwards ease-out;
+    }
 }
 
 @-webkit-keyframes slit {
@@ -743,24 +764,6 @@ h3 {
 @keyframes slit {
 	25% { transform: translateZ(-250px) rotateY(89deg); opacity: 1; animation-timing-function: ease-in;}
 	100% { transform: translateZ(0) rotateY(0deg); opacity: 1; color: black;}
-}
-
-.transition2 {
-    -webkit-transform-style: preserve-3d;
-	-moz-transform-style: preserve-3d;
-	transform-style: preserve-3d;
-	-webkit-transform: translateZ(-3000px) rotateX(90deg);
-	-moz-transform: translateZ(-3000px) rotateX(90deg);
-	-ms-transform: translateZ(-3000px) rotateX(90deg);
-	transform: translateZ(-3000px) rotateX(90deg);
-	color: transparent;
-	opacity: 0;
-}
-
-.transition2.in {
-    -webkit-animation: slit2 .7s forwards ease-out;
-	-moz-animation: slit2 .7s forwards ease-out;
-	animation: slit2 .7s forwards ease-out;
 }
 
 @-webkit-keyframes slit2 {
